--- a/style.css
+++ b/style.css
@@ -23,22 +23,29 @@ html {
 }
 
 body {
+	color: #222;
 	font-size: 16px;
 	font-family: 'Josefin Sans', sans-serif;
 	font-weight: 300;
 	line-height: 1.4;
 	padding: 0;
-	margin: 22px 0 0;
+	margin: 22px 0;
+	transition: 0.75s all;
 }
 
 @media screen and (max-width: 30em) {
 	body {
-		margin-top: 0;	
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 }
 
-h1 {
+h1, h2 {
 	font-weight: 300;
+}
+
+h2 {
+	font-size: 22px;
 }
 
 h1, h2, h3, h4, h5, h6,
