--- a/style.css
+++ b/style.css
@@ -35,13 +35,14 @@ body {
 
 @media screen and (max-width: 30em) {
 	body {
+		font-size: 18px;
 		margin-top: 0;
 		margin-bottom: 0;
 	}
 }
 
 h1, h2 {
-	font-weight: 300;
+	font-weight: 400;
 }
 
 h2 {
