--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
-<p>Ruben Leikarnes</p>
-
 <ul>
 	<li><a href="/contact/">Send oss en forespørsel</a></li>
-	<li><a href="//no.linkedin.com/in/rubenleikarnes">Linkedin profil</a></li>
+	<li><a href="//no.linkedin.com/in/rubenleikarnes">Rubens Linkedin profil</a></li>
 	<li><a href="//twitter.com/@rubix">Følg Ruben på Twitter</a></li>
 </ul>
