--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,136 +1,24 @@
-html {
-    -webkit-box-sizing: border-box; 
-    -moz-box-sizing: border-box; 
-    box-sizing: border-box;
-}
+/*
+ 	LBRL	// www.lbrl.org
+ 	Ruben Leikarnes 	// www.rub1.org
+ */
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
+$black: #222;
+$brand-color: #d5353d;
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
- 
-.clearfix:after {
-  clear: both;
-}
- 
-.clearfix {
-  *zoom: 1;
-}
+$grey-1: #fafafa;
+$grey-2: #f5f5f5;
+$grey-3: #f1f1f1;
 
-body {
-    color: #222;
-    font-size: 16px;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 300;
-    line-height: 1.4;
-    padding: 0;
-    margin: 22px 0;
-    transition: 0.75s all;
-}
+$brand-fonts: helvetica, sans-serif;
 
-@media screen and (max-width: 30em) {
-    body {
-        font-size: 18px;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-}
-
-h1, h2 {
-    font-weight: 400;
-}
-
-h2 {
-    font-size: 22px;
-}
-
-h1, h2, h3, h4, h5, h6,
-p, ul, ol, pre, img, table, 
-form, input, textarea, button,
-nav {
-    margin-top: 0;
-    margin-bottom: 22px;
-}
-
-a, 
-a:visited {
-    color: #d5353d;
-    text-decoration: none;
-}
-
-a:hover,
-a:active {
-    background: #d5353d;
-    color: #fff;
-}
-
-.island {
-    max-width: 30rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 22px 22px 1px;
-}
-
-.content-brand {
-    background: #d5353d;
-    color: #fff;
-}
-
-.content-main {
-    background: #fafafa;
-}
-
-.content-sec {
-    background: #f5f5f5;
-}
-
-.content-footer {
-    background: #f1f1f1;
-}
-
-.header h1 {
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-::selection {
-  background: #f2c2c4;
-}
-
-input, 
-textarea {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ddd;
-    font-size: 14px;
-    font-family: 'Josefin Sans', sans-serif;
-}
-
-label {
-    display: block;
-}
-
-.btn {
-    padding: 6px 8px;
-    border: 1px solid #ddd;
-    font-size: 16px;
-    font-family: 'Josefin Sans', sans-serif;
-}
-
-.btn-positive {
-    background: #fff;
-}
-
-.pull-right {
-    float: right;
-}
-
-.pull-left {
-    float: left;
-}
+@import '_base/borderbox.scss';
+@import '_base/clearfix.scss';
+@import '_base/verticalalign.scss';
+@import '_modules/body.scss';
+@import '_base/verticalrythem.scss';
+@import '_base/typography.scss';
+@import '_modules/island.scss';
+@import '_modules/header.scss';
+@import '_modules/helpers.scss';
+@import '_modules/lists.scss';
