Removed lots of unused pages, "new" singlepage layout
- removed blog
- removed about
- made the header full width
- removed navigation
- footer links open i new tab
- small wording fixes
- updates plugins and jekyll
- removed travis

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -3,7 +3,7 @@
 	<input name="name" type="name" id="senderName" placeholder="Ola Nordmann eller Mitt Firma" required>
 
 	<label for="senderEmail">E-post adresse</label>
-	<input name="_replyto" type="email" id="senderEmail" placeholder="ola.nordmann@epost.no" required>
+	<input name="_replyto" type="email" id="senderEmail" placeholder="ola.nordmann@mittfirma.no" required>
 
 	<label for="senderContent">Forespørsel</label>
 	<textarea name="message" rows="5" id="senderContent" required></textarea>
