--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <ul>
-	<li><a href="/contact/">Send oss en forespørsel</a></li>
-	<li><a href="//no.linkedin.com/in/rubenleikarnes">Rubens Linkedin profil</a></li>
-	<li><a href="//twitter.com/@rubix">Følg Ruben på Twitter</a></li>
+	<li><a href="/">Send oss en forespørsel</a></li>
+	<li><a href="//no.linkedin.com/in/rubenleikarnes" target="_blank">Rubens Linkedin profil</a></li>
+	<li><a href="//twitter.com/@rubix" target="_blank">Følg Ruben på Twitter</a></li>
 </ul>
