--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,3 @@
-<div class="island content-brand header">
+<div class="content-brand header">
   <h1>LBRL</h1>
-</div>
-<div class="island nav content-sec">
-  <nav>
-    <a href="/">Forside</a>
-    <a href="/blog/">Blogg</a>
-    <a href="/contact/">Kontakt</a>
-    <a href="/about/">Om oss</a>
-  </nav>
 </div>
