--- a/_sass/_base/typography.scss
+++ b/_sass/_base/typography.scss
@@ -18,5 +18,5 @@ a:visited {
 a:hover,
 a:active {
 	color: $black;
-	border-bottom: 0.1em solid $brand-color;
+	border-bottom: 1px solid $brand-color;
 }
