--- a/_sass/_modules/header.scss
+++ b/_sass/_modules/header.scss
@@ -1,27 +1,10 @@
 .header {
 	h1 {
-		font-size: 72px;
+		font-size: 6rem;
 
-	    margin-bottom: 15px;
+	    margin-bottom: 0;
 	    text-align: center;
-	}
-
-	a {
-		color: #fff;
-
-		&:hover {
-			background: none;
-			border-bottom: 0.1em solid $brand-color;
-		}
-	}
-
-	p {
-		width: 50vw;
-		font-size: 24px;
-		font-weight: 600;
-		text-align: center;
-		margin: auto;
-		color: #fff;
+	    padding: 3rem;
 	}
 }
 
