--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,4 @@
 @charset "utf-8";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "syntax-highlighting"
-;
+@import "base";
