--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,15 @@
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="author" content="Ruben Leikarnes">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Ruben Leikarnes">
+
+	<!-- Disable tap highlight on IE -->
+	<meta name="msapplication-tap-highlight" content="no">
+
+	<!-- Color the status bar on mobile devices -->
+	<meta name="theme-color" content="#d5353d">
 
 	<link rel="dns-prefetch" href="//google-analytics.com">
 
