--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,4 +1,4 @@
-<form method="POST" action="http://formspree.io/contactform@lbrl.no">
+<form method="POST" action="https://formspree.io/contactform@lbrl.no">
 	<label for="senderName">Navn eller foretak</label>
 	<input name="name" type="name" id="senderName" placeholder="Ola Nordmann eller Mitt Firma" required>
 
