--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -9,7 +9,7 @@
 	<textarea name="message" rows="5" id="senderContent" required></textarea>
 
 	<input type="hidden" name="_subject" value="LBLR oppdrag" />
-	<input type="hidden" name="_next" value="http://lbrl.org/thanks/" />
+	<input type="hidden" name="_next" value="/thanks" />
 	<input type="text" name="_gotcha" style="display:none" />
 
 	<button type="submit" class="btn btn-positive pull-right">Send</button>
